--- a/config.yaml
+++ b/config.yaml
@@ -5,9 +5,14 @@ weapon_att:
   bracelet: 0
 stat_main:
   base: 156350
+  food: 0
+  bracelet: 0
+
+weapon_pdamage: 23.45
 crit: 632
 special: 1776
 swift: 53
+
 engraving:
   원한: 3
   바리케이드: 3
@@ -15,10 +20,74 @@ engraving:
   예리한 둔기: 3
   아드레날린: 3
   진화의 유산: 1
+
+skills:
+  "명령 : 레이드 미사일":
+    level: 12
+    gem: 7
+    tripods:
+      오르간 미사일: 4
+      약점 포착: 4
+    alias: 레미
+  "명령 : 베이비 드론":
+    level: 12
+    tripods:
+      급소 공격: 4
+      일제 공격: 5
+    alias: 베드
+  "코멧 스트라이크":
+    gem: 9
+    alias: 변신Q
+  "슬러그 샷":
+    gem: 9
+    alias: 변신W
+  "레이저 블레이드":
+    gem: 9
+    alias: 변신E
+  "엑셀리온 빔":
+    gem: 9
+    alias: 변신R
+  "버스트 블로우":
+    gem: 9
+    alias: 변신A
+  "크림슨 브레이커":
+    gem: 9
+    alias: 변신S
+
 setitem:
-  환각: 6
+  환각:
+    - 6
+    - 6
+
 card: 남겨진 바람의 절벽 (12)
 
 enemy:
   armor: 6000
   reduction: 0.23
+
+timeline:
+  time: 23
+  cycle:
+    - 레미
+    - 베드
+    - 변신Q
+    - 변신E
+    - 변신S
+    - 변신Q
+    - 변신R
+    - 변신W
+    - 변신A
+    - 변신Q
+    - 변신E
+    - 변신W
+    - 변신Q
+    - 변신R
+    - 변신W
+    - 변신S
+    - 변신Q
+    - 변신E
+    - 변신W
+    - 변신A
+    - 변신Q
+    - 변신R
+    - 변신W
