--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,9 +51,9 @@ ignore_missing_imports = true
 name = "loasim"
 version = "0.0.0"
 description = ""
-authors = ["meson324 <meson324@gmail.com>"]
+authors = ["icepeng <typ0@naver.com>", "meson324 <meson324@gmail.com>"]
 readme = "README.md"
-repository = "https://github.com/oleneyl/loasim"
+repository = "https://github.com/icepeng/loasim"
 
 [tool.poetry.dependencies]
 python = "^3.9"
