--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,6 +58,7 @@ python = "^3.9"
 pydantic = {extras = ["dotenv"], version = "^1.8.2"}
 loguru = "^0.5.3"
 poethepoet = "^0.10.0"
+PyYAML = "^6.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
