--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,6 +70,7 @@ black = "^21.9b0"
 pytest-cov = "^3.0.0"
 requests = "^2.26.0"
 syrupy = "^1.7.4"
+types-PyYAML = "^6.0.4"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
