config file interface

--- a/loasim/gear/data.yml
+++ b/loasim/gear/data.yml
@@ -296,3 +296,166 @@
       - weapon_att: 45662
       - weapon_att: 47717
       - weapon_att: 49864
+  ancient:
+      head:
+        - stat_main: 11267
+        - stat_main: 11495
+        - stat_main: 11727
+        - stat_main: 12191
+        - stat_main: 12916
+        - stat_main: 13683
+        - stat_main: 14495
+        - stat_main: 15356
+        - stat_main: 16267
+        - stat_main: 17867
+        - stat_main: 18673
+        - stat_main: 19516
+        - stat_main: 20397
+        - stat_main: 21317
+        - stat_main: 22279
+        - stat_main: 23284
+        - stat_main: 24334
+        - stat_main: 25432
+        - stat_main: 26579
+        - stat_main: 27778
+        - stat_main: 29030
+        - stat_main: 30005
+        - stat_main: 31013
+        - stat_main: 32055
+        - stat_main: 33131
+        - stat_main: 34244
+      top:
+        - stat_main: 9014
+        - stat_main: 9196
+        - stat_main: 9382
+        - stat_main: 9753
+        - stat_main: 10333
+        - stat_main: 10946
+        - stat_main: 11596
+        - stat_main: 12285
+        - stat_main: 13014
+        - stat_main: 14293
+        - stat_main: 14939
+        - stat_main: 15613
+        - stat_main: 16317
+        - stat_main: 17054
+        - stat_main: 17823
+        - stat_main: 18627
+        - stat_main: 19468
+        - stat_main: 20346
+        - stat_main: 21263
+        - stat_main: 22222
+        - stat_main: 23224
+        - stat_main: 24004
+        - stat_main: 24811
+        - stat_main: 25644
+        - stat_main: 26505
+        - stat_main: 27395
+      bottom:
+        - stat_main: 9738
+        - stat_main: 9935
+        - stat_main: 10135
+        - stat_main: 10537
+        - stat_main: 11163
+        - stat_main: 11826
+        - stat_main: 12528
+        - stat_main: 13272
+        - stat_main: 14060
+        - stat_main: 15442
+        - stat_main: 16139
+        - stat_main: 16867
+        - stat_main: 17629
+        - stat_main: 18424
+        - stat_main: 19255
+        - stat_main: 20124
+        - stat_main: 21032
+        - stat_main: 21981
+        - stat_main: 22972
+        - stat_main: 24008
+        - stat_main: 25090
+        - stat_main: 25933
+        - stat_main: 26804
+        - stat_main: 27705
+        - stat_main: 28635
+        - stat_main: 29597
+      glove:
+        - stat_main: 13520
+        - stat_main: 13793
+        - stat_main: 14072
+        - stat_main: 14630
+        - stat_main: 15499
+        - stat_main: 16419
+        - stat_main: 17394
+        - stat_main: 18427
+        - stat_main: 19521
+        - stat_main: 21440
+        - stat_main: 22408
+        - stat_main: 23419
+        - stat_main: 24476
+        - stat_main: 25580
+        - stat_main: 26735
+        - stat_main: 27941
+        - stat_main: 29201
+        - stat_main: 30518
+        - stat_main: 31895
+        - stat_main: 33333
+        - stat_main: 34836
+        - stat_main: 36006
+        - stat_main: 37216
+        - stat_main: 38466
+        - stat_main: 39758
+        - stat_main: 41093
+      shoulder:
+        - stat_main: 11991
+        - stat_main: 12234
+        - stat_main: 12481
+        - stat_main: 12975
+        - stat_main: 13746
+        - stat_main: 14562
+        - stat_main: 15427
+        - stat_main: 16343
+        - stat_main: 17313
+        - stat_main: 19015
+        - stat_main: 19873
+        - stat_main: 20771
+        - stat_main: 21708
+        - stat_main: 22687
+        - stat_main: 23711
+        - stat_main: 24781
+        - stat_main: 25899
+        - stat_main: 27067
+        - stat_main: 28288
+        - stat_main: 29563
+        - stat_main: 30896
+        - stat_main: 31934
+        - stat_main: 33007
+        - stat_main: 34115
+        - stat_main: 35261
+        - stat_main: 36445
+      weapon:
+        - weapon_att: 19607
+        - weapon_att: 20001
+        - weapon_att: 20403
+        - weapon_att: 21207
+        - weapon_att: 22461
+        - weapon_att: 23790 
+        - weapon_att: 25196
+        - weapon_att: 26686
+        - weapon_att: 28264
+        - weapon_att: 31033
+        - weapon_att: 32430
+        - weapon_att: 33889
+        - weapon_att: 35414
+        - weapon_att: 37008
+        - weapon_att: 38673
+        - weapon_att: 40413
+        - weapon_att: 42232
+        - weapon_att: 44132
+        - weapon_att: 46118
+        - weapon_att: 48194
+        - weapon_att: 50362
+        - weapon_att: 52051
+        - weapon_att: 53796
+        - weapon_att: 55599
+        - weapon_att: 57463
+        - weapon_att: 59390
